@@ -3,6 +3,7 @@
 - Fixes switching to Queue doesn't have focus on song list for keyboard navigation
 - Fixes missing icons in breeze icon theme
 - Better handling of missing songs in playlists
+- Opens the app window a little bit taller if possible
 - Layout tweaks
 
 # 5.2
